--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <meta name="viewport" content="initial-scale=1, width=device-width" />
+    <meta name="theme-color" content="#F6921A" />
+    <link rel="manifest" href="/manifest.json" />
     <title>Arbiter Portal</title>
+    <meta name="description" content="Arbiter Portal for the BeL2 protocol" />
   </head>
-  <body>
+  <body style="background-color: #FFF">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
