Frontend app description added

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#F6921A" />
     <link rel="manifest" href="/manifest.json" />
     <title>Arbiter Portal</title>
-    <meta name="description" content="Arbiter Portal for the BeL2 protocol" />
+    <meta name="description" content="The BeL2 Arbiter Portal is a trustless hub for time-based governance, dispute resolution, and smart BTC services on the Bitcoin-Elastos Layer 2 protocol. Users stake ELA, set fee parameters, and validate cryptographic proofs across EVM-compatible networks, keeping Bitcoin locked on its native chain while supporting advanced financial uses." />
   </head>
   <body style="background-color: #FFF">
     <div id="root"></div>
